--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiogram==3.0.0b8
+aiosqlite==0.21.0
 SQLAlchemy==2.0.21
 alembic==1.11.1
 asyncpg==0.27.0
@@ -6,6 +7,7 @@ httpx==0.24.1
 APScheduler==3.10.1
 uvicorn==0.22.0
 pydantic==1.10.7
+pydantic-settings==2.10.1
 loguru==0.7.0
 pytest==7.4.0
 pytest-asyncio==0.22.0
